--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev -p 1001",
     "build": "next build",
     "start": "next start -p 1001",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:production": "node scripts/test-production.js",
+    "test:production:blockbank": "TEST_URL=https://blockbank.com node scripts/test-production.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
