Add Vercel environment variables configuration scripts

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start -p 1001",
     "lint": "next lint",
     "test:production": "node scripts/test-production.js",
-    "test:production:blockbank": "TEST_URL=https://blockbank.com node scripts/test-production.js"
+    "test:production:blockbank": "TEST_URL=https://blockbank.com node scripts/test-production.js",
+    "vercel:env:setup": "node scripts/configure-vercel.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -25,6 +26,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/uuid": "^10.0.0",
+    "dotenv": "^17.2.3",
     "typescript": "^5.0.0"
   }
 }
