--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,18 @@ credentials.json
 # vercel
 .vercel
 
+# Scripts with secrets (should not be committed)
+scripts/create-service-account-api-direct.js
+scripts/create-service-account-now.js
+scripts/get-oauth-token-auto.js
+scripts/quick-setup-google-drive.js
+scripts/update-google-credentials.js
+scripts/create-service-account-api.js
+scripts/create-service-account-auto.js
+scripts/final-setup-google-drive.js
+scripts/get-refresh-token.js
+scripts/auto-configure-google-drive.js
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
