feat: Script d'assistance automatique pour configuration Shared Drive
- Script interactif setup-shared-drive.js pour configuration guidée
- Guide de setup rapide en 5 minutes
- README_SETUP.md pour démarrer rapidement
- Ajout commande npm run setup:shared-drive dans package.json
- Génération automatique de script Vercel pour configuration

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:production:blockbank": "TEST_URL=https://blockbank.com node scripts/test-production.js",
     "vercel:env:setup": "node scripts/configure-vercel.js",
     "setup:google-drive": "node scripts/setup-google-drive-complete.js",
+    "setup:shared-drive": "node scripts/setup-shared-drive.js",
     "verify:production": "node scripts/verify-production-config.js"
   },
   "dependencies": {
