feat: Remplacement Google Drive par stockage local + interface admin complète
- Système de stockage local simple (remplace Google Drive)
- Interface admin fonctionnelle pour voir les demandes
- Routes API pour lister et télécharger les fichiers
- Correction encodage Unicode dans les noms de fichiers
- Support des fichiers dans sous-dossiers (asset-documents)
- Boutons View et Download pour chaque document
- Compteur de documents dans l'interface admin
- Documentation complète de migration
- Scripts de test et guides

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vercel:env:setup": "node scripts/configure-vercel.js",
     "setup:google-drive": "node scripts/setup-google-drive-complete.js",
     "setup:shared-drive": "node scripts/setup-shared-drive.js",
-    "verify:production": "node scripts/verify-production-config.js"
+    "verify:production": "node scripts/verify-production-config.js",
+    "test:all": "node scripts/test-all.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
