--- a/env.example
+++ b/env.example
@@ -23,3 +23,9 @@ NODE_ENV=production
 # URL de l'application en production (utilisée pour OAuth redirect URI)
 NEXT_PUBLIC_APP_URL=https://your-domain.com
 
+# Supabase Configuration
+# Get these from Supabase Dashboard > Settings > API
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
