--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:all": "node scripts/test-all.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "bcryptjs": "^2.4.3",
     "googleapis": "^166.0.0",
     "next": "^14.0.0",
@@ -27,11 +28,13 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/uuid": "^10.0.0",
     "dotenv": "^17.2.3",
     "open": "^11.0.0",
+    "pg": "^8.16.3",
     "typescript": "^5.0.0"
   }
 }
