feat: Header unifié sur toutes les pages de l'application
- Création du composant Header réutilisable
- Ajout du Header dans le layout racine pour toutes les pages
- Création du HeaderContext pour gérer le hamburger menu
- Intégration dans dashboard et admin layouts
- Correction du Logo SVG avec contenu visible
- Styles renforcés pour garantir la visibilité du header
- Cache Next.js vidé et serveur relancé

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:email": "node scripts/test-email-config.js",
     "test:email:send": "node scripts/test-email-send.js",
     "setup:email": "node scripts/setup-email-admin.js",
+    "setup:resend": "node scripts/setup-resend-domain.js",
     "check:all": "node scripts/check-all-open.js"
   },
   "dependencies": {
