feat: Implémentation complète du système d'authentification avec rôles (user/admin)
- Ajout de la colonne 'role' dans la table users
- Routes API avec gestion des rôles (login, connect-wallet, register, logout)
- AuthContext avec redirections automatiques selon le rôle
- Middleware de protection des routes /dashboard et /admin
- Layouts avec vérification des rôles et redirections
- Composants WalletConnect et LoginModal intégrés
- Scripts SQL pour création/migration de la table users
- Scripts de vérification et documentation complète
- Support double authentification: email/mdp + wallet
- Création automatique de compte lors de connexion wallet
- Protection multi-niveaux des routes selon les rôles

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:marketing": "node scripts/test-marketing-api.js",
     "verify:marketing": "node scripts/verify-marketing-setup.js",
     "create:tables": "node scripts/execute-supabase-sql.js",
+    "setup:users": "node scripts/setup-users-table.js",
     "create:marketing:tables": "node scripts/create-marketing-tables-direct.js",
     "setup:marketing": "node scripts/final-setup-and-test.js",
     "test:email": "node scripts/test-email-config.js",
